--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 <!-- actualiza por el nombre de tu chica o por lo que quieras. -->
     </div>
     <div class="greetings">
+        <span>O</span>
+        <span>S</span>
         <span>C</span>
         <span>A</span>
         <span>R</span>
-        <span>O</span>
-        <span>L</span>
     </div>
   
     <div class="hearts">
