--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <!-- Ajusta segun tus prefencias -->
     <div id="modal" class="modal">
         <div class="modal-content">
-            <h1 id="modal-title">¿Me quieres?</h1>
+            <h1 id="modal-title">¿Me amas?</h1>
             <div class="buttons-container">
                 <button id="yes-btn">Sí</button>
                 <button id="no-btn">No</button>
