--- a/html/album.html
+++ b/html/album.html
@@ -3,32 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fotititos de Laurita</title>
+    <title>Album para mi hermosa mujer</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/album.css">
 </head>
 <body>
     <header>
-        <h1>Fotitos de Laurita</h1>
-        <p>TQM Laurita</p>
+        <h1>Fotitos de mi hermosa mujer </h1>
+        <p>Te amo mucho miamor, feliz cumpleaños</p>
     </header>
 <!-- reemplaza la ruta "/albumimg/ejemplo.jpg" por tu ruta a la foto que quieres que se muestre -->
     <div class="gallery">
         <div class="photo" onclick="openModal(0)">
-            <img src="/albumimg/lau1.jpg" alt="Momentos especiales">
+            <img src="/albumimg/carol1.jpg" alt="Momentos especiales">
             <p class="photo-caption">Hermosa</p>
         </div>
         <div class="photo" onclick="openModal(1)">
-            <img src="/albumimg/lau5.jpg" alt="Más recuerdos">
+            <img src="/albumimg/carol5.jpg" alt="Más recuerdos">
             <p class="photo-caption">Preciosa</p>
         </div>
         <div class="photo" onclick="openModal(2)">
-            <img src="/albumimg/lau3.jpg" alt="Más momentos">
+            <img src="/albumimg/carol3.jpg" alt="Más momentos">
             <p class="photo-caption">Linda</p>
         </div>
         <div class="photo" onclick="openModal(3)">
-            <img src="/albumimg/lau9.jpg" alt="Más momentos">
-            <p class="photo-caption">Lau pequeña</p>
+            <img src="/albumimg/carol9.jpg" alt="Más momentos">
+            <p class="photo-caption">carol pequeña</p>
         </div>
     </div>
 
