--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 <!-- actualiza por el nombre de tu chica o por lo que quieras. -->
     </div>
     <div class="greetings">
-        <span>O</span>
-        <span>S</span>
         <span>C</span>
         <span>A</span>
         <span>R</span>
+        <span>O</span>
+        <span>L</span>
     </div>
   
     <div class="hearts">
@@ -39,14 +39,14 @@
     <div class="buttons-container">
         <div class="button">
             <button>
-                <a href="/FLORES.html">Haga Clic</a>
+                <a href="/html/album.html">Haga Clic</a>
             </button>
         </div>
     </div>
       <!-- Ajusta segun tus prefencias -->
     <div id="modal" class="modal">
         <div class="modal-content">
-            <h1 id="modal-title">¿Me quieres?</h1>
+            <h1 id="modal-title">¿Me amas?</h1>
             <div class="buttons-container">
                 <button id="yes-btn">Sí</button>
                 <button id="no-btn">No</button>
@@ -55,7 +55,7 @@
     </div>
      <!-- Ajusta segun tus prefencias -->
     <div class="celebration">
-        <span>Ya sabía que me queríasssssssssss</span>
+        <span>Ya sabía que me amabassssssssssssssssssssss</span>
         <img src="https://cdn.discordapp.com/attachments/1271610111458152542/1284563549867479072/emoji.png?ex=66e71688&is=66e5c508&hm=0600787f17d26165eb4aa8e583bf99412d0eafe3a875e2a865b393f68cb9f15e&" alt="emoji" class="emoji">
     </div>
     <script src="js/ventana.js"></script>
